--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
    <title>CHEM</title>
    <link rel="shortcut icon" href="./chem-logo.ico" type="image/x-icon">
    <link rel="stylesheet" href="./style.css">
-
-   <link href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.css" rel="stylesheet" />
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
    <div class="header">
+      <span class="material-symbols-outlined" id ='hello'>
+         science
+      </span>
       <h1>chemistry help</h1>
    </div>
    <div class="buttons">
