Adds styling for heading to align icon and text, rewords buttons

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <h1>chemistry help</h1>
    </div>
    <div class="buttons">
-      <button id="grams">convert grams to moles</button>
-      <button id="conc">convert concentration to grams</button>
-      <button id="moles">convert moles to grams</button>
+      <button id="grams">grams to moles</button>
+      <button id="conc">concentration to grams</button>
+      <button id="moles">moles to grams</button>
    </div>
    <script src = ./script.js></script>
 </body>
